[metadata]
name = powerspot
version = 0.1
author = "theolamayo",
description = CLI for automated operations with Spotify
long_description = file: README.md, LICENCE
url = https://github.com/theolamayo/powerspot
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
packages = find:
install_requires =
    Click
    spotipy
    tabulate

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
warn_unused_configs = True

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True

[flake8]
max-line-length = 88
