[metadata]
name = powerspot
version = 0.1
author = "Théo Delecour"
author_email = "theo.delecour@gmail.com"
description = CLI for automated operations with Spotify
long_description = file: README.md, LICENCE
long_description_content_type = text/markdown
license = MIT
url = https://github.com/theodcr/powerspot
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.6
install_requires =
    Click
    spotipy
    tabulate
packages = find:

[options.extras_require]
dev =
    black
    flake8
    isort

[options.entry_points]
console_scripts =
    powerspot = powerspot.cli:main

[mypy]
disallow_untyped_defs = True
ignore_missing_imports = True
warn_unused_configs = True

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True

[flake8]
max-line-length = 88
exclude = .git, *.egg-info, __pycache__, docs, build, dist, .mypy_cache, .venv
